--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -66,7 +66,7 @@
 			  <p>
 			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito Linux e FOSS (Free ed Open Source Software).<br />
           Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere una certificazione professionale in ambito Linux.<br />
-          Con il programma dedicato a Servizi e consulenze intendiamo soddisfare la richiesta di aziende e professionisti nella ricerca di consulenti competenti su Linux ed Open Source.
+          Con il programma dedicato a Servizi e Soluzioni intendiamo soddisfare la richiesta di aziende e professionisti nella ricerca di consulenti competenti su Linux ed Open Source.
 			  </p>
 
   			<div class='prtn-box-container'>
@@ -244,7 +244,7 @@
               <h3>Servizi e Soluzioni</h3>
               <div class='prtn-box-icon'></div>
               <div class='prtn-box-desc'>
-              Certifica la tua azienda con LPI, garantisci la qualità di servizi e consulenze, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale di LPI.
+              Certifica la tua azienda con LPI, garantisci la qualità di Servizi e Soluzioni, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale di LPI.
               </div>
               <div class='prtn-box-button-cont'>
                 <a data-bind='click: show_companies' 
@@ -283,10 +283,12 @@
              </div>
              <h3>Offerte per le societa' di servizi</h3>
              <p class='col-sm-6'>
-             Il programma di certificazione di servizi e consulenze &egrave; dedicata ad aziende e professionisti. Con un controllo da parte del nostro staff e le recensioni dei tuoi clienti, puoi dimostrare la tua competenza, esperienza e professionalità a nuovi potenziali clienti.
+             Il programma di certificazione di Servizi e Soluzioni &egrave; dedicata ad aziende e professionisti. Con un controllo da parte del nostro staff e le recensioni dei tuoi clienti, puoi dimostrare la tua competenza, esperienza e professionalità a nuovi potenziali clienti.
              </p>
              <p class='col-sm-6'>
-                 <a href='#offers/service-company'>vai all'offerta per le aziende</a>
+                 <a href='#offers/service-company'>vai all'offerta per le aziende</a><br /><br />
+                 <a href='http://nuovo.lpi-italia.org/faq/'>Domande frequenti</a><br /><br />
+
              </p>
         </div>
         </div>
@@ -792,6 +794,12 @@
                         <li>Disponibilita' utilizzo logo LPI</li>
                         <li>Posizionamento nel portale LPI</li>
                     </ul>
+<br />
+                    <ul class='prtn-box-bonus-list'>
+                        <li>Fornitura servizi FOSS</li>
+                        <li>Almeno 1 collaboratore certificato Linux Essentials</li>
+                    </ul>
+
                     </p>
                     <div class='prtn-box-button-cont'>
                       <a href="#signup/lpi-sp" class="button">Acquista</a>
@@ -822,6 +830,13 @@
                         <li>Accesso database docenti LCT</li>
                         <li>Referenze clienti certificate</li>
                       </ul>
+<br />
+
+                    <ul class='prtn-box-bonus-list'>
+                       <li>Fornitura di servizi FOSS</li>
+                       <li>Almeno 2 collaboratori certificati LPIC-1</li>
+                       <li>Almeno 1 referenza cliente attiva</li>
+                    </ul>
 
                     <div class='prtn-box-button-cont'>
                       <a href="#signup/lpi-csp" class="button">Acquista</a>
@@ -856,8 +871,14 @@
                         <li>Tracker and CRM Services</li>
                         <li>Top Search Result</li>
                       </ul>
-
-
+<br />
+                    <ul class='prtn-box-bonus-list'>
+                      <li>Fornitura servizi FOSS</li>
+                      <li>Almeno 3 collaboratori certificati LPIC-1</li>
+                      <li>Almeno 1 collaboratore certificato LPIC-2</li>
+                      <li>Almeno 2 referenze clienti attive</li>
+                    </ul>
+<br />
                     <div class='prtn-box-button-cont'>
                       <a href="#signup/lpi-csp-gold" class="button">Acquista</a>
                     </div>
@@ -885,11 +906,23 @@
               <ul class='prtn-box-container'>
                  <li class='prtn-box col-sm-5'>
                   <div class='prtn-box-inner'>
-                    <h3>LPI ATP</h3>
+                    <h3>LPI ATP LE</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc'>
-                    Indicato ad agenzie formative che lavorano con studenti e con un grande pubblico, attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata per chi si avvicina a Linux per iniziare una carriera professionale.
+                    <div class='prtn-box-price'>
+                    200  &euro;
                     </div>
+                    <div class='prtn-box-desc'>
+                    Indicato ad agenzie formative che lavorano con studenti e con un grande pubblico. Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata per chi si avvicina a Linux per iniziare una carriera professionale.
+                    </div>
+
+                    <ul class='prtn-box-bonus-list'>
+                      <li>Accettare il Codice Etico LPI</li>
+                      <li>Approvazione del materiale didattico</li>
+                      <li>LPI potr&agrave; accedere locali, documentazione e il materiale didattico per occasionali visite di controllo qualit&agrave;.</li>
+                      <li>Approvazione del materiale promozionale incluso il sito web dell’organizzazione.</li>
+                      <li>Pagamento quota annuale</li>
+                        </ul>
+
                     <a data-bind='attr:{href: "#signup/" + product_low.handle()}' 
                        class="btn prtn-box-button">Aderisci ora</a>
                   </div>
@@ -899,9 +932,20 @@
                   <div class='prtn-box-inner'>
                     <h3>LPI ATP PRO</h3>
                     <div class='prtn-box-icon'></div>
+                    <div class='prtn-box-price'>
+                      650  &euro;
+                    </div>
                     <div class='prtn-box-desc'>
                     Indicato per aziende, organizzazioni ed agenzie formative che intendono fornire corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono Linux Essentials e le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
                     </div>
+
+                    <ul class='prtn-box-bonus-list'>
+                      <li>Accettare il Codice Etico LPI</li>
+                      <li>Approvazione del materiale didattico</li>
+                      <li>LPI potr&agrave; accedere locali, documentazione e il materiale didattico per occasionali visite di controllo qualit&agrave;.</li>
+                      <li>Approvazione del materiale promozionale incluso il sito web dell’organizzazione.</li>
+                      <li>Pagamento quota annuale</li>
+                    </ul>
                     <a data-bind='attr:{href: "#signup/" + product_middle.handle()}' 
                        class="btn prtn-box-button">Aderisci ora</a>
                   </div>
@@ -913,7 +957,7 @@
 
             <div data-bind='visible: type() == "training-academy" && show'>
               <div class="row">
-              <h1>Formazione per scuole e universit&agrave;</h1>
+              <h1>Formazione per scuole, universit&agrave; e associazioni</h1>
               <p>
               Il programma di partnership per scuole ed universit&agrave; che intendono offrire formazione certificata LPI.<br />
               La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI AAP LE e LPI AAP PRO.
@@ -926,6 +970,9 @@
                   <div class='prtn-box-inner'>
                     <h3>LPI AAP LE</h3>
                     <div class='prtn-box-icon'></div>
+                    <div class='prtn-box-price'>
+                    250  &euro;
+                    </div>
                     <div class='prtn-box-desc'>
                     Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
                     </div>
@@ -938,6 +985,9 @@
                   <div class='prtn-box-inner'>
                     <h3>LPI AAP PRO</h3>
                     <div class='prtn-box-icon'></div>
+                    <div class='prtn-box-price'>
+                    250  &euro;
+                    </div>
                     <div class='prtn-box-desc'>
                     Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono, oltre a Linux Essentials, le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
                     </div>
